<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="1%p"
    android:keyHeight="@dimen/seckey_key_num_height"
    android:keyWidth="10%p"
    android:verticalGap="@dimen/seckey_key_vertical_gap">
    <Row>
        <Key
            android:codes="33"
            android:keyEdgeFlags="left"
            android:keyLabel="!"
            android:keyWidth="10%p" />
        <Key
            android:codes="35"
            android:keyLabel="#"
            android:keyWidth="10%p" />
        <Key
            android:codes="36"
            android:keyLabel="$"
            android:keyWidth="10%p" />
        <Key
            android:codes="37"
            android:keyLabel="%"
            android:keyWidth="10%p" />
        <Key
            android:codes="94"
            android:keyLabel="^"
            android:keyWidth="10%p" />
        <Key
            android:codes="38"
            android:keyLabel="@string/seckey_keyboard_key2"
            android:keyWidth="10%p" /><!--&-->
        <Key
            android:codes="42"
            android:keyLabel="*"
            android:keyWidth="10%p" />
        <Key
            android:codes="40"
            android:keyLabel="("
            android:keyWidth="10%p" />
        <Key
            android:codes="41"
            android:keyEdgeFlags="right"
            android:keyLabel=")"
            android:keyWidth="10%p" />
    </Row>

    <Row>
        <Key
            android:codes="39"
            android:keyEdgeFlags="left"
            android:keyLabel="'"
            android:keyWidth="10%p" />
        <Key
            android:codes="34"
            android:keyLabel="@string/seckey_keyboard_key3"
            android:keyWidth="10%p" /> <!--"-->
        <Key
            android:codes="61"
            android:keyLabel="="
            android:keyWidth="10%p" />
        <Key
            android:codes="95"
            android:keyLabel="_"
            android:keyWidth="10%p" />
        <Key
            android:codes="58"
            android:keyLabel=":"
            android:keyWidth="10%p" />
        <Key
            android:codes="59"
            android:keyLabel=";"
            android:keyWidth="10%p" />
        <Key
            android:codes="64"
            android:keyLabel="@string/seckey_keyboard_key1"
            android:keyWidth="10%p" /><!--@-->
        <Key
            android:codes="126"
            android:keyLabel="~"
            android:keyWidth="10%p" />
        <Key
            android:codes="124"
            android:keyEdgeFlags="right"
            android:keyLabel="|"
            android:keyWidth="10%p" />

    </Row>

    <Row>
        <Key
            android:codes="43"
            android:horizontalGap="4.8%p"
            android:keyLabel="+"
            android:keyEdgeFlags="left"
            android:keyWidth="10%p" />
        <Key
            android:codes="45"
            android:keyLabel="-"
            android:keyWidth="10%p" />
        <Key
            android:codes="92"
            android:keyLabel="\\"
            android:keyWidth="10%p" />
        <Key
            android:codes="91"
            android:keyLabel="["
            android:keyWidth="10%p" />
        <Key
            android:codes="93"
            android:keyLabel="]"
            android:keyWidth="10%p" />
        <Key
            android:codes="123"
            android:keyLabel="{"
            android:keyWidth="10%p" />
        <Key
            android:codes="125"
            android:keyLabel="}"
            android:keyWidth="10%p" />
        <Key
            android:codes="-5"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyWidth="14%p" />
    </Row>

    <Row android:rowEdgeFlags="bottom">
        <Key
            android:codes="-2"
            android:horizontalGap="2.5%p"
            android:keyLabel="123"
            android:keyEdgeFlags="left"
            android:keyWidth="14%p" />
        <Key
            android:codes="44"
            android:keyLabel=","
            android:keyWidth="10%p" />
        <Key
            android:codes="46"
            android:keyLabel="."
            android:keyWidth="10%p" />
        <Key
            android:codes="60"
            android:keyLabel="@string/seckey_keyboard_key4"
            android:keyWidth="10%p" />
        <!--<-->
        <!-->-->
        <Key
            android:codes="62"
            android:keyLabel="@string/seckey_keyboard_key5"
            android:keyWidth="10%p" />
        <!--<Key android:keyWidth="9%p" android:codes="8364" android:keyLabel="€" />-->
        <!--<Key android:keyWidth="9%p" android:codes="163" android:keyLabel="￡" />
        <Key android:keyWidth="9%p" android:codes="165" android:keyLabel="¥" />-->
        <Key
            android:codes="63"
            android:keyLabel="\?"
            android:keyWidth="10%p" />
        <Key
            android:codes="47"
            android:keyLabel="/"
            android:keyWidth="10%p" />
        <Key
            android:codes="100860"
            android:keyLabel="ABC"
            android:keyEdgeFlags="right"
            android:keyWidth="14%p" />
    </Row>
</Keyboard>